--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,32 @@
  *= require_tree .
  *= require_self
  */
+
+table tr th {
+  text-align: left;
+}
+
+table tr td, table tr th {
+  padding: 0 20px 20px 0;
+}
+
+table tr td img {
+  max-height: 100px;
+}
+
+a.image-link:hover {
+  background: none;
+  display: block;
+  position: relative;
+}
+
+a.image-link:hover:after {
+  content: ' ';
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+}
