Added basic SVG coloring functionality

--- a/app/views/floor_plans/show.html.erb
+++ b/app/views/floor_plans/show.html.erb
@@ -2,7 +2,7 @@
 <%= link_to 'Back', floor_plans_path %>
 
 <div class="floor-plan-show">
-  <%= render 'controls' %>
+  <%= render 'color_controls' %>
 
   <p class="floor-plan-title">
     <%= @floor_plan.title %>
