--- a/app/views/floor_plans/_color_controls.html.erb
+++ b/app/views/floor_plans/_color_controls.html.erb
@@ -86,6 +86,6 @@
         </tr>
       </tbody></table>
       <br>
-      <%= link_to 'Download', download_floor_plan_path(@floor_plan) %>
+      <%= link_to 'Download', download_floor_plan_path(@floor_plan), class: 'download' %>
       <br>
 </div>
