Added Download Original button, and improved code generally

--- a/app/views/floor_plans/_color_controls.html.erb
+++ b/app/views/floor_plans/_color_controls.html.erb
@@ -86,6 +86,7 @@
         </tr>
       </tbody></table>
       <br>
-      <%= link_to 'Download', download_floor_plan_path(@floor_plan), class: 'download' %>
+      <%= link_to 'Download Colored', download_floor_plan_path(@floor_plan), class: 'download action-download' %>
       <br>
+      <%= link_to 'Download Original', download_floor_plan_path(@floor_plan), class: 'download' %>
 </div>
